added routing for backend functions for project, fixed issues where server request to save was not working, fixed issue where list was not populating on clientside, WIP: working on delete function for project to delete list items.

--- a/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/app.component.html
+++ b/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<nav class="navbar navbar-light bg-dark">
+  <a [routerLink]="'todo-list'" class="navbar-brand">Todo List App!</a>
+</nav>
 
 <router-outlet></router-outlet>
 
