--- a/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/todo/todo.component.html
+++ b/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/todo/todo.component.html
@@ -3,22 +3,17 @@
     <b>Add an item to your todo list</b>
   </header>
     <div>
-      <form id="formActual">
-<!--        template reference variable-->
-        <input #inputActual>
-        <button (click)="addListItem(inputActual.value)" type="button">Save item to TODO List</button>
-      </form>
+      <input [(ngModel)]="newListItems">
+      <button (click)="saveItem()">Save</button>
     </div>
     <div class="container" style="padding-top: 50px">
       <header>
         <b>Your list is here! Go get'em tiger!</b>
       </header>
-      <div>
-        <div *ngFor="let item of listActual">
-          <ul>
-            <li>{{item}}</li>
-          </ul>
-        </div>
+      <div *ngFor="let item of returnedListItems">
+        <ul>
+          <li>{{item.listItem}}</li>
+        </ul>
       </div>
     </div>
 </div>
