finalized project for week 11? homework assignment, added delete function to web app, customized navbar, fixed issue with CANNOT GET error when reloading todo-list page, on delete the item at the index of the array that is getting deleted is removed from the array.

--- a/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/app.component.html
+++ b/week9_Cudzich_Greg/cudzich-todo/front-end/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-dark">
-  <a [routerLink]="'todo-list'" class="navbar-brand">Todo List App!</a>
+<nav class="navbar navbar-dark bg-info">
+  <a [routerLink]="'todo-list'" class="navbar-brand">My TODO List</a>
 </nav>
 
 <router-outlet></router-outlet>
